src/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Billing__CustomNumberCreationOption__c</fullName>
        <description>Options to control when the custom number will be created. Create custom number when status is Draft or when the Status is Approved.</description>
        <inlineHelpText>Options to control when the custom number will be created.</inlineHelpText>
        <label>Custom Number Creation Option</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldBasedPrefix__c</fullName>
        <description>The field-based prefix to append to the static prefix when generating a Custom Number. Each fetched field value will be separated with the specified field separator.</description>
        <inlineHelpText>The field-based prefix to append to the static prefix when generating a Custom Number.</inlineHelpText>
        <label>Field Based Prefix</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldBasedSuffix__c</fullName>
        <description>The field-based suffix to append after the generated Custom Number. Each fetched field value will be separated with the specified field separator.</description>
        <inlineHelpText>The field based suffix to append after the generated Custom Number.</inlineHelpText>
        <label>Field Based Suffix</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__FieldSeparator__c</fullName>
        <defaultValue>&quot;-&quot;</defaultValue>
        <description>The separator to place after each field fetched for the field based prefix and/or the field based suffix. based prefix_ or the field based suffix. Example: INV-CA-0000000001-SOUTH</description>
        <inlineHelpText>The separator to place after each field fetched for the field based prefix and/or the field based suffix.</inlineHelpText>
        <label>Field Separator</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InitialSequenceNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The initial number for custom numbering sequence.</description>
        <inlineHelpText>The initial number for custom numbering sequence.</inlineHelpText>
        <label>Initial Sequence Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__LegalEntityId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Select the Legal Entity for which the next number is being defined.</description>
        <inlineHelpText>Associated Legal Entity eg. US-NY</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
        <relationshipLabel>Legal Entity Custom Numbering Entries</relationshipLabel>
        <relationshipName>LegalEntityCustomNumberingEntries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__NextSequenceNumber__c</fullName>
        <description>The next number for this custom numbering sequence. Will be initialized to the Initial Sequence Number.</description>
        <inlineHelpText>The next number for this custom numbering sequence.</inlineHelpText>
        <label>Next Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__NumberOfLeadingZeros__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The number of leading zeros preceding the sequence number.</description>
        <inlineHelpText>The number of leading zeros preceding the sequence number.</inlineHelpText>
        <label>Number of Leading Zeros</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__NumberingType__c</fullName>
        <description>Select the object or class of objects to apply the custom numbering settings to.</description>
        <inlineHelpText>Select the object or class of objects to apply the custom numbering settings to.</inlineHelpText>
        <label>Numbering Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Split Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Wallet Credit Memo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__StaticPrefix__c</fullName>
        <description>Initial prefix to prepend when generating a Custom Number. This will precede the optional field based prefix.</description>
        <inlineHelpText>Initial prefix to prepend when generating a Custom Number.</inlineHelpText>
        <label>Static Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__StaticSuffix__c</fullName>
        <description>Final prefix to preconcatenate when generating a Custom Number. This will follow the optional field based suffix.</description>
        <inlineHelpText>Final prefix to concatenate when generating a Custom Number.</inlineHelpText>
        <label>Static Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Legal Entity Custom Numbering Entry</label>
    <nameField>
        <displayFormat>LCNE-{00000000}</displayFormat>
        <label>Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Entity Custom Numbering Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Apttus_Billing__NoOfLeadingZerosRangeError</fullName>
        <active>true</active>
        <errorConditionFormula>Apttus_Billing__NumberOfLeadingZeros__c &lt; 0 || Apttus_Billing__NumberOfLeadingZeros__c &gt; 10</errorConditionFormula>
        <errorDisplayField>Apttus_Billing__NumberOfLeadingZeros__c</errorDisplayField>
        <errorMessage>The number of leading zeros must be greater than 0 and less than 11.</errorMessage>
    </validationRules>
</CustomObject>